img width bug on mobile

--- a/src/scss/tech.scss
+++ b/src/scss/tech.scss
@@ -5,6 +5,7 @@
         &__overflow {
             @include responsive(mobile) {
                 overflow-x: scroll !important;
+                width: 100%;
             }
 
             &__row{
